# oak-d_tracking_relay

./: .gitignore  LICENSE  README.md  architecture.md  config.json  flowchart.md  iris_tracking_flowchart.md  pyproject.toml  tracking_flowchart.md  tracking_overview_simplified.mmd
diagrams/: iris_tracking_flowchart_simplified.mmd  system_overview.mmd  system_overview_simplified.mmd
src/oak-d_tracking_relay/: CameraManager.py  ConfigurationManager.py  TrackingManager.py  UDPManager.py  Worker.py  __init__.py
src/oakd_tracking_relay/: CameraManager.py  ConfigurationManager.py  TrackingDTO.py  TrackingManager.py  UDPManager.py  Utils.py  Worker.py  __init__.py  camera_manager.py  configuration_manager.py  main.py  setup.py  simulation.py  tracking_dto.py  tracking_manager.py  udp_manager.py  ui_manager.py  utils.py
